# mesh-geometry

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: metrics_bench.rs  triangle_area.rs
examples/: compute_cell_volumes.rs  tessellation_demo.rs
src/: float.rs  lib.rs  point.rs  prelude.rs  transforms.rs  vec.rs
src/metrics/: area.rs  centroid.rs  mod.rs  normals.rs  polygon.rs  prism.rs  volume.rs
src/queries/: distance.rs  mod.rs  point_in_polygon.rs  ray_triangle.rs
src/utils/: aabb.rs  jacobian.rs  mod.rs
