[package]
name = "mesh-geometry"
version = "0.4.0"
edition = "2024"
description = "High-performance geometry utilities for coastal/ocean FVM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/mesh-geometry"
documentation = "https://docs.rs/mesh-geometry"
readme = "README.md"

[features]
default = ["std"]
std = ["num-traits"]
no_std = []
bench = ["nalgebra"]

[dependencies]
num-traits = { version = "0.2", optional = true }
nalgebra = { version = "0.32", optional = true}

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"
approx = "0.5"


[workspace]
# (if part of a larger workspace)
